Added new dynamic route for resume sections, a readme and git-example
