# backend/models/userModel.js
@@ -16,10 +16,9 @@ const userSchema = mongoose.Schema({
         type: String,
         required: true
     },
-    role: {
-        type: String,
-        enum: ['user', 'admin'],
-        default: 'user'
+    admin: {
+        type: Boolean,
+        required: true
     }
 },
 {
