# backend/routes/commentRoutes.js
@@ -3,8 +3,7 @@ const router = express.Router()
 import { 
     deleteComment,
     getComments, 
-    setComment,
-    updateComment
+    setComment
 } from'../controllers/commentController.js'
 import { protect } from '../middleware/authMiddleware.js'
 
@@ -14,9 +13,6 @@ router.get('/', protect, getComments)
 
 // @POST Set new comment
 router.post('/', protect, setComment)
-
-// @PUT Updates a message
-router.put('/:id', protect, updateComment)
 
 // @DELETE Delete a message
 router.delete('/:id', protect, deleteComment)
