# backend/routes/userRoutes.js
@@ -3,11 +3,15 @@ import express from 'express'
 const router = express.Router()
 import { 
     registerUser, 
-    loginUser, 
-    //getMe 
+    authUser,
+    deleteUser,
+    updateUser, 
 } from '../controllers/userController.js'
+import {protect} from '../middleware/authMiddleware.js'
 
 router.post('/', registerUser)
-router.post('/login', loginUser)
+router.post('/login', authUser)
+router.put('/', protect, updateUser)
+router.delete('/', protect, deleteUser)
 
 export default router
